--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,20 @@
             <artifactId>opencv</artifactId>
             <version>4.3.0-2</version>
         </dependency>
+        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.kafka</groupId>-->
+        <!--            <artifactId>kafka-clients</artifactId>-->
+        <!--            <version>2.5.0</version>-->
+        <!--        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>2.5.2.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
